# nix

./: .gitignore  Cargo.toml  README.md  duti-config.txt  flake.nix
.github/workflows/: test.yaml
modules/: firefox-extensions.nix  firefox.nix  ghostty.nix  git.nix  homebrew.nix  karabiner.nix  menu-bar.nix  system-defaults.nix  zed.nix  zsh.nix
src/: config.rs  homebrew.rs  lib.rs  main.rs  system.rs
tests/: integration_tests.rs
