[package]
name = "nix-config"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Nix configuration management"
authors = ["Filip Troníček <filip.tronicek@seznam.cz>"]

[lib]
name = "nix_config"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "nix-config"
path = "src/main.rs"
